--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "shouter-server",
+  "name": "beherenow",
   "version": "1.0.0",
   "private": true,
-  "description": "A geolocation based text sharing app",
+  "description": "API for BeHereNow, a geolocation based text sharing app",
   "author": "Patrick Lawrence",
   "keywords": [
     "express",
@@ -10,7 +10,8 @@
   ],
   "main": "index.js",
   "scripts": {
-    "start": "nodemon ./src/index.js",
+    "start": "tsc && node ./dist/index",
+    "develop": "tsc && nodemon ./dist/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
@@ -20,7 +21,10 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
-    "mongodb": "^6.2.0",
-    "nodemon": "^3.0.1"
+    "mongodb": "^6.2.0"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.1",
+    "prettier": "^3.0.3"
   }
 }
