--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "beherenow",
+  "name": "beherenow-api",
   "version": "1.0.0",
   "private": true,
   "description": "API for BeHereNow, a geolocation based text sharing app",
