--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   ],
   "main": "index.js",
   "scripts": {
-    "start": "tsc && node ./dist/index",
-    "develop": "tsc && nodemon ./dist/index.js",
+    "start": "node ./dist/index.js",
+    "develop": "tsc --watch & NODE_ENV=development nodemon ./dist/index.js",
+    "build": "tsc",
+    "clean": "rm ./dist",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
