--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
   ],
   "main": "index.js",
   "scripts": {
-    "start": "node ./dist/index.js",
-    "develop": "tsc --watch & NODE_ENV=development nodemon ./dist/index.js",
+    "start": "NODE_ENV=production node ./dist/index.js",
+    "develop": "tsc --watch & nodemon ./dist/index.js",
     "build": "tsc",
     "clean": "rm ./dist",
     "test": "echo \"Error: no test specified\" && exit 1"
