--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "develop": "tsc --watch & NODE_ENV=development nodemon ./dist/index.js",
     "build": "tsc",
     "clean": "rm ./dist",
+    "format": "prettier . --write",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -34,5 +35,6 @@
     "nodemon": "^3.0.1",
     "prettier": "^3.0.3",
     "typescript": "^5.2.2"
-  }
+  },
+  "prettier": {}
 }
