--- a/package.json
+++ b/package.json
@@ -36,5 +36,10 @@
     "prettier": "^3.0.3",
     "typescript": "^5.2.2"
   },
-  "prettier": {}
+  "prettier": {
+    "printWidth": 120,
+    "singleQuote": true,
+    "semi": false,
+    "jsxSingleQuote": true
+  }
 }
