--- a/package.json
+++ b/package.json
@@ -27,11 +27,11 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "jsonwebtoken": "^9.0.2"
+    "jsonwebtoken": "^9.0.2",
+    "mongodb": "^6.2.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.20",
-    "mongodb": "^6.2.0",
     "nodemon": "^3.0.1",
     "prettier": "^3.0.3",
     "typescript": "^5.2.2"
